Fix z-index bug with affixed navigation

--- a/public/app/sass/modules/_affixed.sass
+++ b/public/app/sass/modules/_affixed.sass
@@ -9,6 +9,7 @@
   @extend %accent-block
   @extend %reset-list
   margin: 0
+  z-index: 50
 
   // Links --------------------------------------------------------- /
 
